<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signInCl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignInScreen">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInEmailTil"
        android:layout_width="@dimen/large_input_field_width"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/signInPasswordTil"
        app:layout_constraintEnd_toEndOf="@+id/signInPasswordTil"
        app:layout_constraintStart_toStartOf="@+id/signInPasswordTil">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInEmailTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_input"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:maxLength="40" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signInPasswordTil"
        android:layout_width="@dimen/large_input_field_width"
        android:layout_height="50dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleDrawable="@drawable/custom_password_toggle"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signInPasswordTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_input"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInBtn"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in_button"
        android:textSize="@dimen/button_text_size"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="@+id/signInPasswordTil"
        app:layout_constraintStart_toStartOf="@+id/signInPasswordTil"
        app:layout_constraintTop_toBottomOf="@+id/signInPasswordTil" />

    <TextView
        android:id="@+id/signInForgotPassTv"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/signInBtn"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/signInBtn"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>